Fix project card alignment and update university logo

--- a/src/components/githubRepoCard/GithubRepoCard.scss
+++ b/src/components/githubRepoCard/GithubRepoCard.scss
@@ -9,6 +9,9 @@
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .repo-card-div:hover {
   box-shadow: $lightBoxShadowDark 0px 20px 30px -10px;
@@ -20,6 +23,7 @@
   justify-content: space-between;
   font-size: 13px;
   color: $githubRepoCardRepoCardStatsColor;
+  margin-top: auto;
 }
 
 .repo-left-stat {
